--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^1.0.2",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@slack/bolt": "^3.7.0",
     "@types/pg": "^8.6.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
