--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nx serve",
     "start:api": "nx serve api",
     "start:web": "nx serve web",
-    "build": "nx build api web",
+    "build": "nx build api && nx build web",
     "test": "nx test"
   },
   "private": true,
